# kittycalendar

./: Makefile.am  README.md  common.mk  configure.ac
data/: Makefile.am  kittycalendar.desktop.in  kittycalendar.gresource.xml  style.css
src/: Makefile.am  kittycalendar.c  kittycalendar.h
